--- a/static/css/shared.css
+++ b/static/css/shared.css
@@ -209,6 +209,16 @@ ul li {
     font-weight: 500;
 }
 
+form table td{
+	padding:5px;
+}
+
+#Top table {
+	font-size: 15px;
+	font-weight: 500;
+	text-align: center;
+}
+
 #Wrapper {
     text-align: center;
     background-color: #d0d0d0;
@@ -323,6 +333,12 @@ ul li {
     text-align: left;
 }
 
+.inner table {
+ 	font-size: 12px;
+    line-height: 150%;
+    text-align: left;
+}
+
 .header {
     padding: 10px;
     font-size: 14px;
@@ -356,6 +372,13 @@ ul li {
     text-align: left;
     border-bottom: 1px solid #e2e2e2;
 }
+
+.cell table {
+    font-size: 12px;
+    line-height: 120%;
+    text-align: left;
+}
+
 
 .grid {
     padding: 0px;
